Update bower dependencies:
 - Juicy/juicy-tile-grid@0.2.0
 - Juicy/juicy-tile-list@0.3.0
 - Juicy/juicy-tile-editor@0.1.0
 - Polyjuice/launcher-include@0.0.6
 - Juicy/juicy-highlight@1925565bf8

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/font/config.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/font/config.json
@@ -67,6 +67,18 @@
       "src": "fontawesome"
     },
     {
+      "uid": "d3b3f17bc3eb7cd809a07bbd4d178bee",
+      "css": "resize-vertical",
+      "code": 59412,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "3c73d058e4589b65a8d959c0fc8f153d",
+      "css": "resize-horizontal",
+      "code": 59413,
+      "src": "fontawesome"
+    },
+    {
       "uid": "f3f90c8c89795da30f7444634476ea4f",
       "css": "angle-left",
       "code": 59410,
@@ -91,6 +103,30 @@
       "src": "fontawesome"
     },
     {
+      "uid": "f06941dfcb90dc24b987d810898c4310",
+      "css": "down",
+      "code": 59421,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f6d72aa5ef8e8f0e553012af9a29a87e",
+      "css": "left",
+      "code": 59422,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "fb94e23ae1e7660aa63cc5f351ec7560",
+      "css": "right",
+      "code": 59423,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "720f98e7580b7987c8dc542513d1d440",
+      "css": "up",
+      "code": 59424,
+      "src": "fontawesome"
+    },
+    {
       "uid": "aa0d9175a3919a260a4012d560e9f01e",
       "css": "right-hand",
       "code": 59397,
@@ -106,6 +142,48 @@
       "uid": "f9c3205df26e7778abac86183aefdc99",
       "css": "ccw",
       "code": 59393,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "dea706a9bd3144316ce37406ec10f469",
+      "css": "level-up",
+      "code": 59414,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "4684e690bad65fb618329dfe52017475",
+      "css": "level-down",
+      "code": 59415,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "6020aff067fc3c119cdd75daa5249220",
+      "css": "exchange",
+      "code": 59416,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f4f0e849b805be1f6d76b65581cb3b8b",
+      "css": "align-left",
+      "code": 59417,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "ae6336c46d73af999fe7460c089abb4d",
+      "css": "align-center",
+      "code": 59418,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "e1e7306b47c3c5e6faecce9d32571381",
+      "css": "align-right",
+      "code": 59419,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "25a81737628d1e654a30ad412d7d6dd7",
+      "css": "align-justify",
+      "code": 59420,
       "src": "fontawesome"
     },
     {
