--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "launcher",
-  "version": "0.0.0",
+  "version": "2.0.0-pre.17",
   "private": true,
   "dependencies": {},
   "devDependencies": {
     "cheerio": "^0.18.0",
     "grunt": "~0.4.1",
+    "grunt-bump": "^0.3.1",
     "grunt-contrib-connect": "0.3.0",
     "grunt-contrib-watch": "~0.4.0",
+    "grunt-replace": "^0.9.2",
     "mocha": "^2.2.1",
     "supertest": "^0.15.0"
   },
   "scripts": {
     "test": "mocha"
-   }
+  }
 }
