--- a/src/Launcher/package/package.config
+++ b/src/Launcher/package/package.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Namespace>Polyjuice.Launcher</Namespace>
-  <Channel>Stable</Channel>  
-  <Version>2.0.0-pre17</Version>
+  <Channel>Stable</Channel>
+  <Version>2.0.0-pre.17</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
