--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "launcher",
-  "version": "2.0.0-pre.17",
+  "version": "2.0.0-pre.20",
   "private": true,
   "dependencies": {},
   "devDependencies": {
     "cheerio": "^0.18.0",
     "grunt": "~0.4.1",
     "grunt-bump": "^0.3.1",
+    "grunt-commands": "^0.1.8",
     "grunt-contrib-connect": "0.3.0",
     "grunt-contrib-watch": "~0.4.0",
     "grunt-replace": "^0.9.2",
