Fix csproj file

--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -100,10 +100,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Launcher\css\style.css" />
-    <Content Include="wwwroot\Launcher\elements\laucnher-search-input\launcher-search-input.html" />
+    <Content Include="wwwroot\Launcher\elements\launcher-search-input\launcher-search-input.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-hot-key\launcher-hot-key.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-launchpad\launcher-launchpad.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-layout\launcher-main.html" />
+    <Content Include="wwwroot\Launcher\elements\launcher-menu\launcher-menu.html" />
     <Content Include="wwwroot\Launcher\viewmodels\LauncherMenu.html" />
     <Content Include="wwwroot\Launcher\viewmodels\LauncherTemplate.html" />
     <Content Include="wwwroot\Launcher\viewmodels\ResultPage.html" />
