--- a/src/Launcher/package/package.config
+++ b/src/Launcher/package/package.config
@@ -2,7 +2,7 @@
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Namespace>Polyjuice.Launcher</Namespace>
   <Channel>Stable</Channel>
-  <Version>2.0.0-pre.19</Version>
+  <Version>2.0.1</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
@@ -10,6 +10,6 @@
   <Company>Polyjuice</Company>
   <DisplayName>Launcher</DisplayName>
   <Heading>Launcher</Heading>
-  <Description>Launcher Application (tested with Starcounter 2.0.3286.3)</Description>
-  <VersionDate>2015-08-04T09:14:48Z</VersionDate>
+  <Description>Launcher Application (tested with Starcounter 2.0.3293.3)</Description>
+  <VersionDate>2015-08-10T15:33:00Z</VersionDate>
 </PackageConfig>
