update description (https://github.com/Polyjuice/AppStoreClient/issues/14)

--- a/src/Launcher/package/package.config
+++ b/src/Launcher/package/package.config
@@ -9,7 +9,7 @@
   <ImageUri>Launcher.png</ImageUri>
   <Company>Polyjuice</Company>
   <DisplayName>Launcher</DisplayName>
-  <Heading>Launcher</Heading>
-  <Description>Launcher Application (tested with Starcounter 2.0.3296.3)</Description>
+  <Description>Wrap all apps in a UI frame with a common launchpad, menu and a search bar.</Description>
   <VersionDate>2015-08-12T08:32:00Z</VersionDate>
+  <Dependency name="Starcounter">2.0.3296.3</Dependency>
 </PackageConfig>
