--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-grid",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "<juicy-tile-grid> is a Polymer Element with CSS Grid Layout renderer for [`juicy-tile-list`](Juicy/juicy-tile-list).",
   "license": "MIT",
   "main": "src/juicy-tile-grid.html",
@@ -17,7 +17,8 @@
     "node_modules",
     "bower_components",
     "examples",
-    "preview.png"
+    "preview.png",
+    "tests"
   ],
   "dependencies": {
     "polymer": "<0.8.0",
