Add Update Juicy/dom-bind-notifier@1.2.0, update dependencies to polymer1 branches,
start migrating LauncherTemplate.html

--- a/src/Launcher/wwwroot/sys/starcounter-include/bower.json
+++ b/src/Launcher/wwwroot/sys/starcounter-include/bower.json
@@ -24,11 +24,13 @@
     "tests"
   ],
   "dependencies": {
-    "imported-template": "~0.0.10",
-    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-grid": ">=0.2.0"
+    "imported-template": "Polymer_1",
+    "juicy-tile-list": "vanilla",
+    "juicy-tile-grid": "vanilla",
+    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#polymer1"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#~3.1.3"
+    "web-component-tester": "Polymer/web-component-tester#~3.1.3",
+    "polymer": "~1.1.3"
   }
 }
