--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -13,19 +13,22 @@
     "tests"
   ],
   "dependencies": {
-    "webcomponentsjs": "webcomponents/webcomponentsjs#~0.5.5",
-    "polymer": "Polymer/polymer#~0.5.5",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#~0.7.12",
+    "polymer": "Polymer/polymer#~1.1.3",
     "core-toolbar": "Polymer/core-toolbar#~0.5.0",
     "paper-toggle-button": "Polymer/paper-toggle-button",
-    "juicy-tile-list": ">=0.3.1",
-    "juicy-tile-grid": ">=0.2.2",
-    "juicy-tile-editor": "Juicy/juicy-tile-editor#>=0.1.0",
+    "juicy-tile-grid": "#vanilla",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#polymer1",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "juicy-display-router": "Juicy/juicy-display-router#gh-pages",
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
     "core-field": "Polymer/core-field#~0.5.0",
-    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
+    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#polymer1",
     "console-log": "console-log#~1.0.0",
-    "starcounter-include": "Polyjuice/launcher-include#>=0.0.7"
+    "starcounter-include": "Polyjuice/launcher-include#polymer1",
+    "dom-bind-notifier": "*",
+
+    "juicy-tile-list": "#vanilla",
+    "juicy-color-picker": "Juicy/juicy-color-picker#vanilla"
   }
 }
