--- a/src/Launcher/wwwroot/sys/juicy-tile-list/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/bower.json
@@ -2,11 +2,10 @@
   "name": "juicy-tile-list",
   "version": "0.3.2",
   "homepage": "https://github.com/Juicy/juicy-tile-list",
-  "description": "<juicy-tile-list> is a Polymer Element with sortable tiles that packs efficiently without changing HTML structure (changes CSS only).",
+  "description": "<juicy-tile-list> is a Custom Element with sortable tiles that packs efficiently without changing HTML structure (changes CSS only).",
   "license": "MIT",
   "main": "src/juicy-tile-list.html",
   "keywords": [
-    "polymer",
     "web-components",
     "tiles",
     "masonry",
@@ -22,7 +21,6 @@
     "Gruntfile.js"
   ],
   "dependencies": {
-    "polymer": "<0.8.0"
   },
   "devDependencies": {
     "web-component-tester": "~3.1.3"
