Changes related to SQL isolation and juicy tiles replacement.

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -32,7 +32,7 @@
     "launchpad": {
         "icons": { },
         "names": { },
-		"juicyTilesSetup": {}
+		"layout": {}
     },
     "dashboard": { },
     "appFilter": [
