--- a/src/Launcher/wwwroot/sys/juicy-color-picker/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-color-picker/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "juicy-color-picker",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "homepage": "https://github.com/Juicy/juicy-color-picker",
-  "description": "<juicy-color-picker> is a Polymer color picker",
+  "description": "<juicy-color-picker> is a simple color picker",
   "license": "MIT",
   "main": "src/juicy-color-picker.html",
   "keywords": [
@@ -16,6 +16,5 @@
     "bower_components"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer"
   }
 }
