--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "launcher",
-  "version": "2.0.0-pre.18",
+  "version": "3.0.8",
   "private": true,
   "dependencies": {},
   "devDependencies": {
