--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "cheerio": "^0.18.0",
     "grunt": "~0.4.1",
     "grunt-bump": "^0.3.1",
-    "grunt-commands": "^0.1.8",
     "grunt-contrib-connect": "0.3.0",
     "grunt-contrib-watch": "~0.4.0",
     "grunt-replace": "^0.9.2",
+    "grunt-shell": "^1.1.2",
     "mocha": "^2.2.1",
     "supertest": "^0.15.0"
   },
