Use latest bower feature `ignoredDependencies` - fixes #168

--- a/src/Launcher/.bowerrc
+++ b/src/Launcher/.bowerrc
@@ -1,3 +1,22 @@
 {
-  "directory" : "wwwroot/sys"
+  "directory" : "wwwroot/sys",
+  "ignoredDependencies": [
+      "PuppetJs",
+      "imported-template",
+      "puppet-redirect",
+      "dom-bind-notifier",
+      "juicy-redirect",
+      "starcounter-debug-aid",
+      "puppet-client",
+      "bootswatch",
+      "starcounter-include",
+      "polymer",
+          "paper-ripple",
+          "paper-styles",
+          "paper-behaviors",
+          "iron-localstorage",
+          "iron-flex-layout",
+          "iron-icons",
+          "iron-a11y-keys-behavior"
+  ]
 }
