--- a/src/Launcher/package/package.config
+++ b/src/Launcher/package/package.config
@@ -2,7 +2,7 @@
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Namespace>Polyjuice.Launcher</Namespace>
   <Channel>Stable</Channel>
-  <Version>3.0.9</Version>
+  <Version>3.0.10</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
@@ -10,6 +10,6 @@
   <Company>Polyjuice</Company>
   <DisplayName>Launcher</DisplayName>
   <Description>Wrap all apps in a UI frame with a common launchpad, menu and a search bar.</Description>
-  <VersionDate>2015-11-16T21:28:18Z</VersionDate>
-  <Dependency name="Starcounter">~2.1.135</Dependency>
+  <VersionDate>2015-11-26T22:17:19Z</VersionDate>
+  <Dependency name="Starcounter">2.1.577</Dependency>
 </PackageConfig>
