Update bower dependencies:
-Juicy/juicy-json-editor@1.1.0
-Juicy/juicy-tile-list@1.1.0
-Juicy/juicy-tile-grid@1.2.1
-StarcounterSamples/launcher-include@0.1.0

fix for Starcounter/RebelsLounge#13

--- a/src/Launcher/.bowerrc
+++ b/src/Launcher/.bowerrc
@@ -1,6 +1,7 @@
 {
   "directory" : "wwwroot/sys",
   "ignoredDependencies": [
+      "webcomponentsjs",
       "PuppetJs",
       "imported-template",
       "puppet-redirect",
@@ -9,7 +10,6 @@
       "starcounter-debug-aid",
       "puppet-client",
       "bootswatch",
-      "starcounter-include",
       "polymer",
           "paper-ripple",
           "paper-styles",
