--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-editor",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "homepage": "https://github.com/Juicy/juicy-tile-editor",
   "description": "<juicy-tile-editor> is an editor form for <juicy-tile-list>",
   "license": "MIT",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-grid":  ">=1.0.0"
+    "juicy-tile-list":  ">=1.1.0",
+    "juicy-tile-grid":  ">=1.1.0"
   }
 }
