--- a/src/Launcher/package/package.config
+++ b/src/Launcher/package/package.config
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Namespace>Polyjuice.Launcher</Namespace>
+  <Namespace>StarcounterSamples.Launcher</Namespace>
   <Channel>Stable</Channel>
   <Version>3.0.12</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
   <ImageUri>Launcher.png</ImageUri>
-  <Company>Polyjuice</Company>
+  <Company>StarcounterSamples</Company>
   <DisplayName>Launcher</DisplayName>
   <Description>Wrap all apps in a UI frame with a common launchpad, menu and a search bar.</Description>
   <VersionDate>2015-11-30T15:39:31Z</VersionDate>
