Set puppet-client.session-timeout value to keep session alive
https://github.com/Starcounter/Starcounter/issues/3084

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -1,5 +1,8 @@
 {
     "Html": "",
+    "ServerSession": {
+        "TimeoutMinutes": 0
+    },
     "homeThumbnail": { },
     "homeUrl": "",
     "editingMode$": false,
