--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-editor",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "homepage": "https://github.com/Juicy/juicy-tile-editor",
   "description": "<juicy-tile-editor> is an editor form for <juicy-tile-list>",
   "license": "MIT",
@@ -18,7 +18,8 @@
     "polymer": "Polymer/polymer",
     "juicy-highlight": "Juicy/juicy-highlight#gh-pages",
     "juicy-popover": "Juicy/juicy-popover#gh-pages",
-    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages"
+    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
+    "juicy-draggable": "Juicy/juicy-draggable#master"
   },
   "devDependencies": {
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
