Replace appName with AppName to eliminate IE issues
https://github.com/StarcounterSamples/Launcher/issues/157

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -32,7 +32,7 @@
     },
     "appFilter": [
         {
-            "appName": "",
+            "AppName": "",
             "on$": true,
             "text": "",
             "thumbnail": { }
