--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-grid",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "<juicy-tile-grid> is a Custom Element with CSS Grid Layout renderer for [`juicy-tile-list`](Juicy/juicy-tile-list).",
   "license": "MIT",
   "main": "juicy-tile-grid.html",
@@ -17,7 +17,7 @@
     "bower_components",
     "examples",
     "preview.png",
-    "tests"
+    "test"
   ],
   "dependencies": {
     "juicy-tile-list": ">=0.3.0"
