Add x-browser support via Juicy/juicy-tile-table@0.0.1
Update bower dependencies:
* Juicy/juicy-tile-editor@9be5003b2f
* Juicy/juicy-tile-list@1.2.0
* Juicy/juicy-tiles-setup-sync@42b5b6fba8
* StarcounterSamples/launcher-include@f2396777ea (juicy-tile-table)
Remove:
- Juicy/juicy-tile-grid

https://github.com/Starcounter/Starcounter/issues/3258

--- a/src/Launcher/wwwroot/sys/starcounter-include/bower.json
+++ b/src/Launcher/wwwroot/sys/starcounter-include/bower.json
@@ -25,8 +25,8 @@
   ],
   "dependencies": {
     "imported-template": "Juicy/imported-template#gh-pages",
-    "juicy-tile-grid": ">=1.1.0",
-    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages"
+    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
+    "juicy-tile-table": "*"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#~3.1.3",
