--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -15,15 +15,15 @@
   "dependencies": {
     "webcomponentsjs": "webcomponents/webcomponentsjs#~0.7.12",
     "polymer": "Polymer/polymer#~1.1.3",
-    "juicy-tile-grid": ">=1.2.1",
-    "juicy-tile-editor": "Juicy/juicy-tile-editor#>=1.1.0",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.4.0",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "starcounter-include": "StarcounterSamples/launcher-include#>=0.1.0",
+    "starcounter-include": "StarcounterSamples/launcher-include#juicy-tile-table",
     "dom-bind-notifier": "*",
     "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
     "iron-icons": "PolymerElements/iron-icons#~1.0.4",
     "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#~1.0.8",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5"
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "juicy-tile-table": "*"
   }
 }
