--- a/src/Launcher/wwwroot/sys/juicy-tile-list/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-list",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "homepage": "https://github.com/Juicy/juicy-tile-list",
   "description": "<juicy-tile-list> is a Custom Element with sortable tiles that packs efficiently without changing HTML structure (changes CSS only).",
   "license": "MIT",
@@ -20,9 +20,9 @@
     "bugs",
     "Gruntfile.js"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "web-component-tester": "~3.1.3"
+    "web-component-tester": ">=4.2.0",
+    "webcomponentsjs": "^0.7.20"
   }
 }
