Changed layout-property in launchpad to string instead of json. Workaround for https://github.com/Juicy/juicy-tile-editor/issues/127

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -28,7 +28,7 @@
     "menu": { },
     "launchpad": {
         "names": { },
-		"layout": {}
+		"layout": ""
     },
     "appFilter": [
         {
