--- a/src/Launcher/wwwroot/sys/starcounter-include/bower.json
+++ b/src/Launcher/wwwroot/sys/starcounter-include/bower.json
@@ -21,15 +21,15 @@
     "Gruntfile.js",
     "wwwroot/sys",
     "test",
-    "tests"
+    "wct.conf.json"
   ],
   "dependencies": {
-    "imported-template": "Juicy/imported-template#gh-pages",
+    "imported-template": ">=1.4.0",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-table": "*"
+    "juicy-tile-table": ">=0.0.4"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#~3.1.3",
-    "polymer": "~1.1.3"
+    "web-component-tester": "Polymer/web-component-tester#>=4.2.2",
+    "polymer": ">=1.1.3"
   }
 }
