Draft of predefined layouts
Starcounter/RebelsLounge/issues/14
Update dependencies:

-Juicy/juicy-tile-editor@a82d0d47ec
-Juicy/juicy-highlight@e308bb5102

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-editor",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "homepage": "https://github.com/Juicy/juicy-tile-editor",
   "description": "<juicy-tile-editor> is an editor form for <juicy-tile-list>",
   "license": "MIT",
@@ -12,7 +12,8 @@
   "ignore": [
     "**/.*",
     "examples",
-    "bower_components"
+    "bower_components",
+    "test"
   ],
   "dependencies": {
     "polymer": "Polymer/polymer",
@@ -23,8 +24,10 @@
   },
   "devDependencies": {
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-list":  ">=1.1.0",
-    "juicy-tile-grid":  ">=1.1.0",
-    "juicy-tile-table":  "tomalec/juicy-tile-table#gh-pages"
+    "juicy-tile-list": ">=1.1.0",
+    "juicy-tile-grid": ">=1.1.0",
+    "juicy-tile-table": ">=0.0.5",
+    "web-component-tester": "^4.0.0",
+    "es6-promise": ">=3.2.1"
   }
 }
