--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/package.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/package.json
@@ -1,25 +1,26 @@
 {
   "name": "juicy-tile-editor",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "<juicy-tile-editor> is an editor form for <juicy-tile-list>",
   "main": "src/juicy-tile-editor.html",
   "directories": {
     "example": "examples",
     "test": "test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "~1.9.1",
     "grunt": "~0.4.4",
-    "grunt-mocha": "~0.4.10",
     "grunt-bump": "^0.3.1",
-    "mocha": "~1.18.2",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-text-replace": "~0.3.11"
+    "grunt-mocha": "~0.4.10",
+    "grunt-text-replace": "~0.3.11",
+    "mocha": "~1.18.2",
+    "polyserve": "^0.7.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "grunt watch"
   },
   "repository": {
     "type": "git",
