--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -27,6 +27,8 @@
             "thumbnail": { }
         }
     ],
-    "workspaces": [ ],
+    "permanentbar": {},
+	"workspaces": [ ],
+	"sidebar": {},
     "uri": ""
 }
