--- a/test/Launcher_AcceptanceTest/Launcher_AcceptanceTest.csproj
+++ b/test/Launcher_AcceptanceTest/Launcher_AcceptanceTest.csproj
@@ -79,6 +79,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BaseTest.cs" />
     <Compile Include="PageLoads.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebDriverFactory.cs" />
