--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -27,7 +27,7 @@
             "thumbnail": { }
         }
     ],
-    "permanentbar": {},
+    "contextbar": {},
 	"workspaces": [ ],
 	"sidebar": {},
     "uri": ""
