--- a/test/Launcher_AcceptanceHelperOne/Launcher_AcceptanceHelperOne.csproj
+++ b/test/Launcher_AcceptanceHelperOne/Launcher_AcceptanceHelperOne.csproj
@@ -42,6 +42,9 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Simplified.Data.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -61,12 +64,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Launcher_AcceptanceHelperOnePage.json.cs">
+      <DependentUpon>Launcher_AcceptanceHelperOnePage.json</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Launcher_AcceptanceHelperOne\Master.html" />
     <Content Include="wwwroot\Launcher_AcceptanceHelperOne\Menu.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="Launcher_AcceptanceHelperOnePage.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
