Freeze inactive workspaces by disabling AutoRefreshBoundProperties. Fixes #215

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -38,6 +38,6 @@
             "thumbnail": { }
         }
     ],
-    "workspaces": [ ],
+  "workspaces": [{"$":  {"Reuse" :  "Launcher.LayoutInfo" } } ],
     "uri": ""
 }
