Update StarcounterSamples/launcher-include@b2ff5b05ef (juicy-composition)
Update Juicy/juicy-composition@e988bfc9bc
Remove Juicy/juicy-tiles-setup-sync

Starcounter/EpicDemo/issues/13

--- a/src/Launcher/wwwroot/sys/starcounter-include/bower.json
+++ b/src/Launcher/wwwroot/sys/starcounter-include/bower.json
@@ -25,8 +25,7 @@
   ],
   "dependencies": {
     "imported-template": ">=1.4.0",
-    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-table": "#gh-pages"
+    "juicy-composition": "Juicy/juicy-composition#gh-pages"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#>=4.2.2",
