--- a/src/Launcher/wwwroot/sys/starcounter-include/bower.json
+++ b/src/Launcher/wwwroot/sys/starcounter-include/bower.json
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "imported-template": ">=1.4.0",
-    "juicy-composition": "Juicy/juicy-composition#gh-pages"
+    "juicy-composition": ">=0.0.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#>=4.2.2",
