--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -27,6 +27,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5"
   },
   "resolutions": {
-    "juicy-highlight": "^1.1.0"
+    "juicy-highlight": "^1.1.0",
+    "polymer": "1.6.0"
   }
 }
