--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -23,7 +23,8 @@
     "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
     "iron-icons": "PolymerElements/iron-icons#~1.0.4",
     "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#~1.0.8",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5"
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "juicy-popover": "Juicy/juicy-popover#^0.0.2"
   },
   "resolutions": {
     "juicy-highlight": "^1.1.0"
