--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -16,7 +16,7 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#~0.7.12",
     "polymer": "Polymer/polymer#~1.1.3",
     "juicy-tile-table": "#gh-pages",
-    "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#~2.0.3",
     "juicy-redirect": "Juicy/juicy-redirect#~0.4.0",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
     "starcounter-include": "StarcounterSamples/launcher-include#>=0.5.0",
