--- a/src/Launcher/wwwroot/sys/juicy-popover/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-popover/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-popover",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Custom Element that expands an area when clicked on a handle",
   "homepage": "https://github.com/Juicy/juicy-popover",
   "license": "MIT",
@@ -17,5 +17,8 @@
   "ignore": [
     "**/.*",
     "bower_components"
-  ]
+  ],
+  "dependencies": {
+    "webcomponentsjs": "^0.7.22"
+  }
 }
