--- a/test/Launcher_AcceptanceTest/Launcher_AcceptanceTest.csproj
+++ b/test/Launcher_AcceptanceTest/Launcher_AcceptanceTest.csproj
@@ -37,6 +37,10 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.core, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NUnitTestAdapter.2.0.0\lib\nunit.core.dll</HintPath>
       <Private>True</Private>
@@ -87,6 +91,7 @@
     <Compile Include="WebDriverFactory.cs" />
     <Compile Include="WorkspaceOpens.cs" />
     <Compile Include="WorkspacePreservesPresentationLogic.cs" />
+    <Compile Include="InactiveWorkspacesAreFrozen.cs" />
     <Compile Include="WorkspaceSwitches.cs" />
   </ItemGroup>
   <ItemGroup>
