--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "launcher",
-  "version": "4.0.1",
+  "version": "5.0.0-develop.0",
   "private": true,
   "dependencies": {},
   "devDependencies": {
