--- a/src/Launcher/package/package.config
+++ b/src/Launcher/package/package.config
@@ -2,7 +2,7 @@
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Namespace>StarcounterSamples.Launcher</Namespace>
   <Channel>Stable</Channel>
-  <Version>4.1.0</Version>
+  <Version>5.0.0-develop.0</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
@@ -10,6 +10,6 @@
   <Company>StarcounterSamples</Company>
   <DisplayName>Launcher</DisplayName>
   <Description>Wrap all apps in a UI frame with a common launchpad, menu and a search bar.</Description>
-  <VersionDate>2016-05-09T20:29:00Z</VersionDate>
-  <Dependency name="Starcounter">~2.2.1.2059</Dependency>
+  <VersionDate>2016-08-12T16:08:29Z</VersionDate>
+  <Dependency name="Starcounter">~2.2.1.2877</Dependency>
 </PackageConfig>
