Fix re-stamping starcounter-include with default composition
Update bower dependencies:
* StarcounterSamples/launcher-include@1.3.0

Closes StarcounterPrefabs/Launcher/issues/242

--- a/src/Launcher/wwwroot/sys/starcounter-include/bower.json
+++ b/src/Launcher/wwwroot/sys/starcounter-include/bower.json
@@ -21,7 +21,8 @@
     "Gruntfile.js",
     "wwwroot/sys",
     "test",
-    "wct.conf.json"
+    "wct.conf.json",
+    "demo"
   ],
   "dependencies": {
     "imported-template": ">=1.4.3",
