--- a/src/Launcher/wwwroot/sys/paper-behaviors/.travis.yml
+++ b/src/Launcher/wwwroot/sys/paper-behaviors/.travis.yml
@@ -15,7 +15,7 @@ addons:
   apt:
     sources:
       - google-chrome
-      - ubuntu-toolchain-r-test
+      - ubunco-toolchain-r-test
     packages:
       - google-chrome-stable
       - g++-4.8
