--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -182,15 +182,15 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Tunity-3\Colab.Common\Colab.Common.csproj">
-      <Project>{aad408c8-78ed-491e-9184-ad2fb8bf2773}</Project>
-      <Name>Colab.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="weaver.ignore">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Colab\Colab.Common\Colab.Common.csproj">
+      <Project>{aad408c8-78ed-491e-9184-ad2fb8bf2773}</Project>
+      <Name>Colab.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
