--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -190,6 +190,10 @@
       <Project>{aad408c8-78ed-491e-9184-ad2fb8bf2773}</Project>
       <Name>Colab.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Colab\Concepts.Ring8.Tunity\Concepts.Ring8.Tunity.csproj">
+      <Project>{023591a6-3fe7-46d6-816e-970781bc5ca4}</Project>
+      <Name>Concepts.Ring8.Tunity</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <TypedJSON Include="ViewModels\LauncherMobilePage.json">
