--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -2,8 +2,8 @@
   "Html": "",
 
   "signedIn": false,
+  "$signedIn": { "Bind": "SignedInCB" },
   "signin": { },
-
 
   "homeThumbnail": { },
   "homeUrl": "",
