new launcher system

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -30,8 +30,11 @@
   ],
 
   "workspaces": [ { "$": { "Reuse": "Launcher.WorkSpace" } } ],
+  
   "contextbar": { },
   "contextpanel": { },
   "sidepanel": { },
+
+  "redirect$": "",
   "uri": ""
 }
