top right menu fix.

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -19,9 +19,12 @@
     "previewVisible": false,
     "close$": 0
   },
-  "user": { },
+  "user": {
+  },
   "menu": { },
-  "topbarRightMenu": {},
+  "topbarRightMenu": {
+  },
+  "DisplayToprightMenu": true,
   "appFilter": [
     {
       "AppName": "",
